syntax = "proto3";

package tunein.kafka.messages;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

enum AdEventType {
  UnknownEvent = 0;
  AdStartEvent = 1;
  AdEndEvent = 2;
  ConnectionStartEvent = 3;
  ConnectionErrorEvent = 4;
  AdFillSegmentEvent = 5;
  SkippedBreakEvent = 6;
}
message AdEvent {
  AdEventType event_type = 1;
  google.protobuf.Timestamp timestamp = 2;
  optional string source_url = 3;
  optional string recording_id = 4;
  optional string ad_metadata = 5;
  optional string broadcast_group = 6;
  optional string broadcast_name = 7;
  optional string source_system = 8;
  optional string pod_name = 9;
  optional string err_code = 10;
  optional string AdFillContentID = 11;
  optional string AdFillCategory = 12;
  optional google.protobuf.Duration AdFillDuration = 13;
  optional int32 AdFillOrder = 14;
  optional string StationID = 15;
  optional string AdMarkerID = 16;
  optional int64  AdMarkerTimestamp = 17;
}

